--- a/serverless.yml
+++ b/serverless.yml
@@ -22,6 +22,10 @@ provider:
 plugins:
   - serverless-python-requirements
 
+package:
+  exclude:
+    - Tests/**
+
 functions:
   app:
     handler: main.handler
