add test for update and checkout routes, and also development requirements text file

--- a/serverless.yml
+++ b/serverless.yml
@@ -25,6 +25,10 @@ plugins:
 package:
   exclude:
     - Tests/**
+    - requirements-dev.txt
+    - .gitignore
+    - README.md
+    - node_modules/**
 
 functions:
   app:
